--- a/Test sbarramento/Index.html
+++ b/Test sbarramento/Index.html
@@ -10,25 +10,25 @@
   <body>
     <nav>
       <div class="top-nav">
-        <span style="width: 20%; height: 100%;" ></span>
+        <div class="two-bars">
+        <span style="width: 25%; height: 100%;" ></span>
         <span style="width: 60%; height: 100%;" ></span>
+    </div>
+        <div class="five-bars">
+        <span style="width: 100%; height: 15%"></span>
+        <span style="width: 100%; height: 15%"></span>
+        <span style="width: 100%; height: 15%"></span>
+        <span style="width: 100%; height: 15%"></span>
+        <span style="width: 100%; height: 15%"></span>
+    </div>
       </div>
-      <div class="middle-nav">
-          <span style="width: 100%; height: 10%"></span>
-          <span style="width: 100%; height: 10%"></span>
-          <span style="width: 100%; height: 10%"></span>
-          <span style="width: 100%; height: 10%"></span>
-          <span style="width: 100%; height: 10%"></span>
-      </div>
+
       
           <span style="width: 100%; height: 20%;"></span>
       
     </nav>
     <main>
-        <div class="top-main">
-            <span style="width: 60%; height: 100%"></span>
-            <span style="width: 20%; height: 100%"></span>
-        </div>
+
     </main>
     <aside></aside>
   </body>
